# movie-finder-chain

./: .cursorrules  .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Jenkinsfile  Makefile  README.md  chat.py  docker-compose.yml  pyproject.toml
.claude/commands/: implement.md  review-pr.md  session-start.md
.codex/: config.toml
.cursor/rules/: architect.mdc  debugger.mdc  developer.mdc  project.mdc  python.mdc
.devcontainer/: devcontainer.json
.gemini/: settings.json
.gemini/skills/architect/: SKILL.md
.gemini/skills/debugger/: SKILL.md
.gemini/skills/developer/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
.junie/: guidelines.md
ai-context/: README.md
ai-context/prompts/: implement.md
docs/: chain_diagram.md  chain_diagram_annotated.md
examples/: basic_usage.py  streaming_example.py
prompts/: qa_context.md  refinement.md
scripts/: generate_diagram.py
src/chain/: __init__.py  config.py  graph.py  state.py
src/chain/models/: __init__.py  output.py
src/chain/nodes/: __init__.py  confirmation.py  dead_end.py  imdb_enrichment.py  presentation.py  qa_agent.py  rag_search.py  refinement.py  validation.py
src/chain/prompts/: __init__.py  confirmation.md  qa_context.md
src/chain/rag/: __init__.py  service.py  vector_store.py
src/chain/utils/: __init__.py  llm_factory.py  logger.py
tests/: conftest.py  test_graph.py  test_llm_factory.py  test_logger.py  test_models.py  test_nodes.py  test_provider_factory.py  test_rag_service.py  test_vector_store.py
